--- a/config.org
+++ b/config.org
@@ -34,7 +34,7 @@
 #+BEGIN_SRC emacs-lisp
 (setq inhibit-startup-message t)
 #+END_SRC
-** Edit config file function f  
+** Edit config file function  
 #+BEGIN_SRC emacs-lisp
   (defun config-visit()
     (interactive)
@@ -65,6 +65,38 @@
 (set-keyboard-coding-system 'utf-8)
 (set-selection-coding-system 'utf-8)
 (prefer-coding-system 'utf-8)
+#+END_SRC
+** Manage windows like a pro
+*** Use switch-window plugin, it only works with windows > 2 mapping them with a, s, d, f, j, k, l
+#+BEGIN_SRC emacs-lisp
+  (use-package switch-window
+    :ensure t
+    :config
+    (setq switch-window-style 'minibuffer)
+    (setq switch-window-increase 4)
+    (setq switch-window-threshold 2)
+    (setq switch-window-shortcut-style 'qwerty)
+    (setq switch-window-qwerty-shortcuts
+          '( "a" "s" "d" "f" "h" "j" "k" "l"))
+    :bind
+    ([remap other-window] . switch-window))
+
+#+END_SRC
+*** The cursor follow-up a new windows
+#+BEGIN_SRC emacs-lisp
+   (defun vertical-win ()
+    (interactive)
+    (split-window-right)
+    (balance-windows)
+    (other-window 1))
+  (global-set-key (kbd "C-x 3") 'vertical-win)
+
+  (defun horizontal-win ()
+    (interactive)
+    (split-window-below)
+    (balance-windows)
+    (other-window 1))
+  (global-set-key (kbd "C-x 2") 'horizontal-win)
 #+END_SRC
 * Terminal
 ** Set Bash as default shell
